--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-datepicker": "^2.14.0"
   }
 }
