--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "framer-motion": "^1.8.4",
     "joi-browser": "^13.4.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
