--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react-datepicker": "^2.14.0"
+    "react-datepicker": "^2.14.0",
+    "react-useanimations": "^1.2.12"
   }
 }
