--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "bcrypt-nodejs": "0.0.3",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
